# UtilityLibrary

./: .clang-format  .clang-tidy  .cproject  .gitignore  .gitmodules  .project  CMakeLists.txt  LICENSE  README.md
cmake/: library_macros.cmake  test_macros.cmake
parts/: CMakeLists.txt
parts/buffer/: CMakeLists.txt  ring_buffer.hpp  test_ring_buffer.cpp
parts/configuration/: CMakeLists.txt  parameters.cpp  parameters.hpp  parameters_converters.hpp  parameters_helper.hpp  parameters_table.hpp  test_converters.cpp  test_parameters.cpp
parts/controler/: CMakeLists.txt  pid.hpp  test_pid.cpp
parts/controller/: CMakeLists.txt  pid.hpp  test_pid.cpp
parts/crc/: CMakeLists.txt  crc.hpp  test_crc.cpp
parts/general/: CMakeLists.txt  bit_operations.hpp  std_to_array_fwd.hpp
parts/parameter/: CMakeLists.txt  parameters_converters.hpp  parameters_table.hpp  test_converters.cpp  test_parameters.cpp  test_parameters_table.cpp
parts/string/: CMakeLists.txt  conversion_constants.hpp  from_string_conversion.hpp  test_string_conversion.cpp  to_string_conversion.hpp
remoteProjects/: .clang-tidy  CMakeLists.txt
